# NetSpecter

./: .gitignore  CMakeLists.txt  README.md  blacklist.csv  run.sh
include/: GuardController.hpp
include/analytics/: StatsTracker.hpp
include/core/: CaptureEngine.hpp
include/protocol/: Dissector.hpp  Protocols.hpp
include/telemetry/: TelemetryExporter.hpp
src/: GuardController.cpp  main.cpp
src/analytics/: StatsTracker.cpp
src/core/: CaptureEngine.cpp  Dissector.cpp
src/kern/: xdp_prog.c
src/telemetry/: TelemetryExporter.cpp
